@@ -3,6 +3,7 @@
 - rpmdrake:
   o kill "Mandriva choices"
   o only list priority upgrades if there're
+  o warn there're priority upgrades when selecting other packages (#38885)
 
 Version 4.6.1 - 10 March 2008, Thierry Vignaud
 
